# StreamingHttpResponse

./: LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml  tox.ini
StreamingHttpResponse/: settings.py  urls.py  wsgi.py
StreamingHttpResponse/apps/: __init__.py
StreamingHttpResponse/apps/stream/: views.py
StreamingHttpResponse/apps/stream/templates/stream/: index.html
