[tool.poetry]
name = "streaminghttpresponse"
version = "0.1.0"
description = "Example on how to create a view that will use a Stream Response in Django"
authors = ["edilio <edilio@gallardo.solutions>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
